 * Improved socket performance (would be nice if we could be used as a "hub")
 * "The message is blocked by User Interface Privilege Isolation, Administrative applications that need to see it can allow it through by calling ChangeWindowMessageFilter after making sure the necessary security precautions are in place. "

2008-06-30 MickeM
 * Fixed issue with CheckFile and performance data ( #156 )
 + Added option (InvalidStatus) to CheckCounter to allow other then UNKNOWN return state when counters are missing ( #167 ).
   *NOTICE* this is all reasons (so if the counter is missing or some such the same will happen not just when the instance is missing)
   Message will reflect reason.
 * Fixed issue in the arraybuffer (one of the plit functions had a problem with multiple chars of the same)

2008-06-25 MickeM
 * Fixed issue with CheckDriveSize and CheckAllOthers (#188)

2008-06-24 MickeM
 + Added new check (to CheckHelpers): CheckOK: Just return OK (anything passed along will be used as a message).
 + Added new check (to CheckHelpers): CheckWARNING: Just return WARN (anything passed along will be used as a message).
 + Added new check (to CheckHelpers): CheckCRITICAL: Just return CRIT (anything passed along will be used as a message).
 + Added new check (to CheckHelpers): CheckVersion: Just return the nagios version (along with OK status).
 * Better error messages in the check service thingy.

2008-06-18 MickeM
 * Fixed an issue in regards to reading the return packet in the in the NRPEClient (now it works).
   Before only the first 1024 bytes were used.

2008-06-15 MickeM
 * Applied patches from Jeff Goldschrafe <goldschr AT cshl.edu>
   + CheckDriveSize now uses "all drives" when no drive is specified.
   * Fixed misspellt Container

2008-06-14 MickeM
 * Fixed error message from external commands (better reporting now)

2008-05-14 MickeM
 * Fixed memoryleak in the service checker.
     I am really sorry I usualy write better code then this.

2008-04-03 MickeM