@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,3,12
-#define PRODUCTVER     0,3,3,12
-#define STRFILEVER     _T("0.3.3.12")
-#define STRPRODUCTVER  _T("0.3.3.12")
-#define STRPRODUCTDATE  _T("2008-06-25")
+#define FILEVER        0,3,3,13
+#define PRODUCTVER     0,3,3,13
+#define STRFILEVER     _T("0.3.3.13")
+#define STRPRODUCTVER  _T("0.3.3.13")
+#define STRPRODUCTDATE  _T("2008-06-30")
 #endif // AUTOBUILD_H
