@@ -35,7 +35,7 @@ std::wstring WMIQuery::sanitize_string(LPTSTR in) {
 	return in;
 }
 
-WMIQuery::result_type WMIQuery::execute(std::wstring query)
+WMIQuery::result_type WMIQuery::execute(std::wstring ns, std::wstring query)
 {
 	result_type ret;
 
@@ -45,9 +45,9 @@ WMIQuery::result_type WMIQuery::execute(std::wstring query)
 		throw WMIException(_T("CoCreateInstance for CLSID_WbemAdministrativeLocator failed!"), hr);
 	}
 
-	BSTR bstrNamespace = (_T("root\\cimv2"));
+	CComBSTR strNamespace(ns.c_str());
 	CComPtr< IWbemServices > service;
-	hr = locator->ConnectServer( bstrNamespace, NULL, NULL, NULL, WBEM_FLAG_CONNECT_USE_MAX_WAIT, NULL, NULL, &service );
+	hr = locator->ConnectServer( strNamespace, NULL, NULL, NULL, WBEM_FLAG_CONNECT_USE_MAX_WAIT, NULL, NULL, &service );
 	if (FAILED(hr)) {
 		throw WMIException(_T("ConnectServer failed!"), hr);
 	}
